# ISiT

2_course/SURGUSA/: authorization.html
2_course/openedu web 2.0/: RESUME - A ThemifyCloud Template.html
2_course/Английский/: 11.04.2021.docx  Altered HW 22.02.2021.docx  Formal letter.docx  Translated 2.docx  Translated copy.docx  Translated.docx  rendering 1.docx  rendering 2.docx  перевод.docx
2_course/ВМ/: 16,12,2020.xlsx  20,12,2020 — копия.xlsx  20,12,2020.xlsx  ВМ 10.11.20-1.docx  ВМ 16.12.2020- Рунге-Кутта.docx  ВМ 16.12.2020-Эйлера-Коши.docx
2_course/Дифуры/: 17.docx
2_course/Зачетная неделя 02.06.2021/: Вопросы к экзамену.xlsx  Дифференциальные уравнения.doc  Задачи КР.docx  Подготовка к Экзамену к УД.docx
2_course/ММвЭ/: ~$ММвЭ_2.docx  Лаб.xlsx  ММвЭ.7z
2_course/Право/: 05,0,2021.docx  12.03.2021.docx  26.03.2021.docx  27.02.2021.docx  сс.docx
2_course/Практика/: Кратко обо всем.docx  Отчет.docx  Текст к презентации.docx  напечать.docx
2_course/Презентация/: 1622112259Презентация.pptx  Помощник студента.pptx
2_course/ТП/: Ответы.docx  на печать.docx
2_course/ТФКП/: 1.docx  ~$1.docx
2_course/Физ-ра/: Физ-ра.pptx
3_course/BigData/: 1.docx
3_course/Computer graphics/: #version 400 core  cg_p1_flags.glsl
3_course/Computer graphics/CG_P2/: CMakeLists.txt  main.c
3_course/Computer graphics/CG_P4/: CMakeLists.txt  main.cpp
3_course/English/: 08.11.2021.docx  Final_Test.docx  Tunyan.docx  temp.docx  ~$mputing in a post-Moore world.docx
3_course/OOP/: Lab1.7z
3_course/OS/: 2,4,5,6.7z  реферат.docx
3_course/VKR/: Blank_zadania.docx
3_course/ОТУ/: LAB_PRAK.doc  Otchet 4.docx  Otchet_1.docx  Otchet_2.docx  Otchet_3.docx  Otchet_4.docx  Otchet_5.docx  (+3 more)
(+442 files in other folders)
